fixed bug with overflow

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
 
 #root, html, body {
   height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
 }
 
